--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
         </section>
         <section class="page_2">
             <div class="text_center">
-                <h2 class="text_center"  data-aos="fade-up" data-aos-once="true" data-aos-delay="200">A1 Solutions That Take Your <br>
+                <h2 class="text_center" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">A1 Solutions That
+                    Take Your <br>
                     Business to the Next Level</h2>
-                <p  data-aos="fade-up" data-aos-once="true" data-aos-delay="200">We design, develop, and implement automation <br> tools that help you work smarter, not harder</p>
+                <p data-aos="fade-up" data-aos-once="true" data-aos-delay="200">We design, develop, and implement
+                    automation <br> tools that help you work smarter, not harder</p>
             </div>
             <div class="content_between" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
                 <div class="left_content">
@@ -274,39 +276,145 @@
                 <div class="right_content">
                     <span class="heading_top">Workflow Automation</span>
                     <h2 data-aos="fade-up" data-aos-once="true" data-aos-delay="300">Automate repetitive tasks</h2>
-                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="400">We help you streamline internal operations by automating manual workflows like data entry,
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="400">We help you streamline internal
+                        operations by automating manual workflows like data entry,
                         reporting, and approval chains saving time and cutting down errors.</p>
-                    <div data-aos="fade-up" data-aos-once="true" data-aos-delay="500"><button class="heading_top" style="margin: 5px;">Internal Task Bots</button>
+                    <div data-aos="fade-up" data-aos-once="true" data-aos-delay="500"><button class="heading_top"
+                            style="margin: 5px;">Internal Task Bots</button>
                         <button class="heading_top" style="margin: 5px;">100+ Automations</button>
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="page_2">
             <div class="content_between">
                 <div data-aos="fade-up" data-aos-once="true" data-aos-delay="200" class="right_content">
                     <span class="heading_top">AI Assistant</span>
                     <h2 data-aos="fade-up" data-aos-once="true" data-aos-delay="300">Delegate Daily Tasks</h2>
-                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="400">From managing calendars to drafting emails and summarizing meetings, our AI assistants work
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="400">From managing calendars to drafting
+                        emails and summarizing meetings, our AI assistants work
                         around the clock to keep your business running smarter and faster.</p>
-                    <div data-aos="fade-up" data-aos-once="true" data-aos-delay="500"><button class="heading_top">Summaries</button>
+                    <div data-aos="fade-up" data-aos-once="true" data-aos-delay="500"><button
+                            class="heading_top">Summaries</button>
                         <button class="heading_top">Scheduling</button>
                     </div>
                 </div>
                 <div data-aos="fade-up" data-aos-once="true" data-aos-delay="200" class="left_content">
                     <div class="boxborder">
                         <div class="backGroundBox">
-                            <div  data-aos="fade-up" data-aos-once="true" data-aos-delay="500" class="animation_section" style="margin-top: 50px;">
+                            <div data-aos="fade-up" data-aos-once="true" data-aos-delay="500" class="animation_section"
+                                style="margin-top: 50px;">
                                 <div class="box" style="width: 100px;height: 100px;">
                                     <div class="innerBox" style="width: 50px;height: 50px;">
                                     </div>
                                 </div>
                             </div>
-                            <h4 style="text-align: center;"  data-aos="fade-up" data-aos-once="true" data-aos-delay="600">What can I help with?</h4>
-                            <p style="text-align: center;" data-aos="fade-up" data-aos-once="true" data-aos-delay="700">Weather you want help in customer handling or make changes in your system just give me command</p>
-                            <div data-aos="fade-up" data-aos-once="true" data-aos-delay="800" class="assistant heading_top">
+                            <h4 style="text-align: center;" data-aos="fade-up" data-aos-once="true"
+                                data-aos-delay="600">What can I help with?</h4>
+                            <p style="text-align: center;" data-aos="fade-up" data-aos-once="true" data-aos-delay="700">
+                                Weather you want help in customer handling or make changes in your system just give me
+                                command</p>
+                            <div data-aos="fade-up" data-aos-once="true" data-aos-delay="800"
+                                class="assistant heading_top">
                                 <span>Generate a 30 days content</span>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page_2">
+            <div class="content_between" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
+                <div class="left_content">
+                    <div class="boxborder">
+                        <div class="backGroundBox">
+                            <div class="top_content"
+                                style="display: flex; align-items: center;justify-content: space-between;"
+                                data-aos="fade-up" data-aos-once="true" data-aos-delay="500">
+                                <span style="white-space:nowrap;font-weight: 500;letter-spacing: 1px;">Emailing
+                                    sending...</span><span class="loader"></span>
+                            </div>
+                            <div class="email_content" data-aos="fade-up" data-aos-once="true" data-aos-delay="400">
+                            </div>
+                            <div class="sending_email_status" data-aos="fade-up" data-aos-once="true"
+                                data-aos-delay="500">
+                                <div class="email_status"><span>Draft</span><span>Schedule</span><span>Send</span></div>
+                                <div class="animation_email">
+                                    <div class="animation_email_1"></div>
+                                    <div class="animation_email_2"></div>
+                                    <div class="animation_email_3"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right_content">
+                    <span class="heading_top">Sales & Marketing</span>
+                    <h2 data-aos="fade-up" data-aos-once="true" data-aos-delay="300">Accelerate Sales Growth</h2>
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="400">AI tools for lead generation,
+                        personalized outreach, and automated content creation that scales your sales efforts and builds
+                        stronger brand presence.</p>
+                    <div data-aos="fade-up" data-aos-once="true" data-aos-delay="500"><button class="heading_top"
+                            style="margin: 5px;">Leads</button>
+                        <button class="heading_top" style="margin: 5px;">Social post</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page_3 page_2">
+            <div class="text_center">
+                <h2 class="text_center" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Our Simple, Smart,
+                    and Scalable Process<br>
+                    Business to the Next Level</h2>
+                <p data-aos="fade-up" data-aos-once="true" data-aos-delay="200">We design, develop, and implement
+                    automation tools that help you work smarter, not harder</p>
+            </div>
+            <div class="steps_boxes">
+                <div class="step_box_1 step_box" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
+                    <button class="heading_top" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Step 1</button>
+                    <h2 style="font-size: 28px;" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Smart Analyzing</h2>
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="200">We assess your needs and identify AI solutions to streamline workflows and improve efficiency.
+                    </p>
+                    <div class="flex-between" style="gap: 10px;">
+                        <div class="box_1" data-aos="fade-up" data-aos-once="true" data-aos-delay="300">
+                            <div class="scanner_animation flex">
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="box_2" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
+                            <ul>
+                                <li data-aos="fade-up" data-aos-once="true" data-aos-delay="200">System check</li>
+                                <li data-aos="fade-up" data-aos-once="true" data-aos-delay="300">Process check</li>
+                                <li data-aos="fade-up" data-aos-once="true" data-aos-delay="400">Speed check </li>
+                                <li data-aos="fade-up" data-aos-once="true" data-aos-delay="500">Manual work</li>
+                                <li data-aos="fade-up" data-aos-once="true" data-aos-delay="600">Repetative task</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="step_box_2 step_box" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
+                    <button class="heading_top" data-aos="fade-up" data-aos-once="true" data-aos-delay="300">Step 2</button>
+                    <h2 style="font-size: 28px;" data-aos="fade-up" data-aos-once="true" data-aos-delay="400">AI Development</h2>
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="500">Our team builds intelligent automation systems tailored to your business processes.
+                    </p>
+                    <div class="code_box" data-aos="fade-up" data-aos-once="true" data-aos-delay="600">
+                        <div class="code_content">
+                            <code>
+                                <span style="color: #814AC8;">def</span> check_trigger(self, value): <br>
+                                &nbsp;&nbsp;&nbsp;<span style="color: #814AC8;">if</span> value > self.threshold: <br>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;       <span style="color: #814AC8;">self</span>.status = "active" <br>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;       <span style="color: #814AC8;">return</span> "Automation triggered!" <br>
+                                &nbsp;&nbsp;   <span style="color: #814AC8;">else</span>: <br>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;       <span style="color: #814AC8;">return</span> "No action taken."<br>
+                                <span style="color: #814AC8;">def</span> get_status<span style="color: #814AC8;">(</span>self<span style="color: #814AC8;">)</span>: <br>
+                                &nbsp;&nbsp;&nbsp;<span style="color: #814AC8;">return f</span>"Status: <span style="color: #814AC8;">{</span>self.status<span style="color: #814AC8;">}</span>"<br>
+                                <span style="color: #814AC8;">class</span> AutomationTrigger: <br>
+                                &nbsp;&nbsp;&nbsp;<span style="color: #814AC8;">def</span> <span style="color: #814AC8;">__init__(</span>self, threshold<span style="color: #814AC8;">)</span>: <br>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        <span style="color: #814AC8;">self</span>.threshold = threshold <br>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        <span style="color: #814AC8;">self</span>.status = "inactive" <br>
+
+                            </code>
                         </div>
                     </div>
                 </div>
