--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en,ur">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XTract - home page clone</title>
+    <meta name="description" content="business Development website">
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -362,7 +363,7 @@
                 </div>
             </div>
         </section>
-        <section class="page_3 page_2">
+        <section class="page_3">
             <div class="text_center">
                 <h2 class="text_center" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Our Simple, Smart,
                     and Scalable Process<br>
@@ -372,9 +373,12 @@
             </div>
             <div class="steps_boxes">
                 <div class="step_box_1 step_box" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
-                    <button class="heading_top" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Step 1</button>
-                    <h2 style="font-size: 28px;" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Smart Analyzing</h2>
-                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="200">We assess your needs and identify AI solutions to streamline workflows and improve efficiency.
+                    <button class="heading_top" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Step
+                        1</button>
+                    <h2 style="font-size: 28px;" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Smart
+                        Analyzing</h2>
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="200">We assess your needs and identify AI
+                        solutions to streamline workflows and improve efficiency.
                     </p>
                     <div class="flex-between" style="gap: 10px;">
                         <div class="box_1" data-aos="fade-up" data-aos-once="true" data-aos-delay="300">
@@ -394,9 +398,12 @@
                     </div>
                 </div>
                 <div class="step_box_2 step_box" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
-                    <button class="heading_top" data-aos="fade-up" data-aos-once="true" data-aos-delay="300">Step 2</button>
-                    <h2 style="font-size: 28px;" data-aos="fade-up" data-aos-once="true" data-aos-delay="400">AI Development</h2>
-                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="500">Our team builds intelligent automation systems tailored to your business processes.
+                    <button class="heading_top" data-aos="fade-up" data-aos-once="true" data-aos-delay="300">Step
+                        2</button>
+                    <h2 style="font-size: 28px;" data-aos="fade-up" data-aos-once="true" data-aos-delay="400">AI
+                        Development</h2>
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="500">Our team builds intelligent
+                        automation systems tailored to your business processes.
                     </p>
                     <div class="code_box" data-aos="fade-up" data-aos-once="true" data-aos-delay="600">
                         <div class="code_content">
@@ -420,6 +427,106 @@
                 </div>
             </div>
         </section>
+        <section class="page_3" style="margin-top: 20px;">
+            <div class="steps_boxes">
+                <div class="step_box_1 step_box" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
+                    <button class="heading_top" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Step
+                        3</button>
+                    <h2 style="font-size: 28px;" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">Seamless
+                        Integration</h2>
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="200">We smoothly integrate AI solutions
+                        into your existing infrastructure with minimal disruption.
+                    </p>
+                    <div style="width: 100%;" style="gap: 10px;">
+                        <div class="box_1 steamless flex" style="width: 100%;" data-aos="fade-up" data-aos-once="true"
+                            data-aos-delay="300">
+                            <div class="steamless_1 flex">
+                                <div class="box" style="width: 100px;height: 100px;">
+                                    <div class="innerBox" style="width: 50px;height: 50px;"></div>
+                                </div>
+                            </div>
+                            <div class="steamless_2">
+                                <div class="range_box">
+                                    <div class="inner_range"></div>
+                                </div>
+                                <div class="range_box">
+                                    <div class="inner_range"></div>
+                                </div>
+                                <div class="range_box">
+                                    <div class="inner_range"></div>
+                                </div>
+                            </div>
+                            <div class="steamless_3">
+                                <div class="img_1 img">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#814AC8"
+                                        class="bi bi-cpu" viewBox="0 0 16 16">
+                                        <path
+                                            d="M5 0a.5.5 0 0 1 .5.5V2h1V.5a.5.5 0 0 1 1 0V2h1V.5a.5.5 0 0 1 1 0V2h1V.5a.5.5 0 0 1 1 0V2A2.5 2.5 0 0 1 14 4.5h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14a2.5 2.5 0 0 1-2.5 2.5v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14A2.5 2.5 0 0 1 2 11.5H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2A2.5 2.5 0 0 1 4.5 2V.5A.5.5 0 0 1 5 0m-.5 3A1.5 1.5 0 0 0 3 4.5v7A1.5 1.5 0 0 0 4.5 13h7a1.5 1.5 0 0 0 1.5-1.5v-7A1.5 1.5 0 0 0 11.5 3zM5 6.5A1.5 1.5 0 0 1 6.5 5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5zM6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5z" />
+                                    </svg>
+                                </div>
+                                <div class="img_2 img">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#814AC8"
+                                        class="bi bi-anthropic" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M9.218 2h2.402L16 12.987h-2.402zM4.379 2h2.512l4.38 10.987H8.82l-.895-2.308h-4.58l-.896 2.307H0L4.38 2.001zm2.755 6.64L5.635 4.777 4.137 8.64z" />
+                                    </svg>
+                                </div>
+                                <div class="img_3 img">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#814AC8"
+                                        class="bi bi-claude" viewBox="0 0 16 16">
+                                        <path
+                                            d="m3.127 10.604 3.135-1.76.053-.153-.053-.085H6.11l-.525-.032-1.791-.048-1.554-.065-1.505-.08-.38-.081L0 7.832l.036-.234.32-.214.455.04 1.009.069 1.513.105 1.097.064 1.626.17h.259l.036-.105-.089-.065-.068-.064-1.566-1.062-1.695-1.121-.887-.646-.48-.327-.243-.306-.104-.67.435-.48.585.04.15.04.593.456 1.267.981 1.654 1.218.242.202.097-.068.012-.049-.109-.181-.9-1.626-.96-1.655-.428-.686-.113-.411a2 2 0 0 1-.068-.484l.496-.674L4.446 0l.662.089.279.242.411.94.666 1.48 1.033 2.014.302.597.162.553.06.17h.105v-.097l.085-1.134.157-1.392.154-1.792.052-.504.25-.605.497-.327.387.186.319.456-.045.294-.19 1.23-.37 1.93-.243 1.29h.142l.161-.16.654-.868 1.097-1.372.484-.545.565-.601.363-.287h.686l.505.751-.226.775-.707.895-.585.759-.839 1.13-.524.904.048.072.125-.012 1.897-.403 1.024-.186 1.223-.21.553.258.06.263-.218.536-1.307.323-1.533.307-2.284.54-.028.02.032.04 1.029.098.44.024h1.077l2.005.15.525.346.315.424-.053.323-.807.411-3.631-.863-.872-.218h-.12v.073l.726.71 1.331 1.202 1.667 1.55.084.383-.214.302-.226-.032-1.464-1.101-.565-.497-1.28-1.077h-.084v.113l.295.432 1.557 2.34.08.718-.112.234-.404.141-.444-.08-.911-1.28-.94-1.44-.759-1.291-.093.053-.448 4.821-.21.246-.484.186-.403-.307-.214-.496.214-.98.258-1.28.21-1.016.19-1.263.112-.42-.008-.028-.092.012-.953 1.307-1.448 1.957-1.146 1.227-.274.109-.477-.247.045-.44.266-.39 1.586-2.018.956-1.25.617-.723-.004-.105h-.036l-4.212 2.736-.75.096-.324-.302.04-.496.154-.162 1.267-.871z" />
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="step_box_2 step_box" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
+                    <button class="heading_top" data-aos="fade-up" data-aos-once="true" data-aos-delay="300">Step
+                        4</button>
+                    <h2 style="font-size: 28px;" data-aos="fade-up" data-aos-once="true" data-aos-delay="400">Continuous
+                        Optimization</h2>
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-delay="500">We refine performance, analyze
+                        insights, and enhance automation for long-term growth.s
+                    </p>
+                    <div class="box_2" style="width: 100%;" data-aos="fade-up" data-aos-once="true"
+                        data-aos-delay="200">
+                        <ul style="width: 100%;">
+                            <li data-aos="fade-up" data-aos-once="true" style="padding:20px" data-aos-delay="200">
+                                Chatbot system</li>
+                            <li data-aos="fade-up" data-aos-once="true" style="padding:20px" data-aos-delay="300">
+                                Workflow system</li>
+                            <li data-aos="fade-up" data-aos-once="true" style="padding:20px" data-aos-delay="400">Sales
+                                system</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="card" data-aos="fade-up" data-aos-once="true" data-aos-delay="200">
+        <h1>Let AI do the Work so you can Scale Faster</h1>
+        <p>Book a Call Today and Start Automating</p>
+        <button>Book a free call</button>
+    </div>
+    <h2 style="text-align: center; margin-top: 20px;" data-aos="fade-up" data-aos-once="true" style="padding:20px" data-aos-delay="200">Get feedback...</h2>
+    <div class="footer"data-aos="fade-up" data-aos-once="true" style="padding:20px" data-aos-delay="200">
+        <div class="logo">
+            <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" style="margin: 0px 10px;" class="bi bi-rss"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z" />
+                    <path
+                        d="M5.5 12a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m-3-8.5a1 1 0 0 1 1-1c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1-1-1m0 4a1 1 0 0 1 1-1 6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1-1-1" />
+                </svg>Xtract</h3>
+            <p>For practicing the project of Xtract clone.</p>
+        </div>
+        <div class="feedback">
+            <p>if you see a tempaery issue to inform on my whatsapp number</p>
+            <a href="https://wa.me/03454131372"><button>Contact us</button></a>
+        </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="app.js"></script>
