--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
             </div>
 
         </header>
-        <div class="navbar">
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+        <div class="hiddenNavbar">
+            <div class="navbar">
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </section>
     <div class="container">
@@ -511,11 +513,12 @@
         <p>Book a Call Today and Start Automating</p>
         <button>Book a free call</button>
     </div>
-    <h2 style="text-align: center; margin-top: 20px;" data-aos="fade-up" data-aos-once="true" style="padding:20px" data-aos-delay="200">Get feedback...</h2>
-    <div class="footer"data-aos="fade-up" data-aos-once="true" style="padding:20px" data-aos-delay="200">
+    <h2 style="text-align: center; margin-top: 20px;" data-aos="fade-up" data-aos-once="true" style="padding:20px"
+        data-aos-delay="200">Get feedback...</h2>
+    <div class="footer" data-aos="fade-up" data-aos-once="true" style="padding:20px" data-aos-delay="200">
         <div class="logo">
-            <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" style="margin: 0px 10px;" class="bi bi-rss"
-                    viewBox="0 0 16 16">
+            <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    style="margin: 0px 10px;" class="bi bi-rss" viewBox="0 0 16 16">
                     <path
                         d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z" />
                     <path
